--- a/main/style.css
+++ b/main/style.css
@@ -1,6 +1,9 @@
 .blue{
     color:blue;
 }
+.tomato{
+    color:tomato
+}
 
 .upper{
     text-transform: uppercase;
@@ -17,3 +20,19 @@
 .point:hover{
     cursor: pointer;
 }
+
+.wrong{
+    background-color: rgb(109, 109, 109);
+    
+}
+
+.collection-item , .collection-item *{
+    border: 1px solid;
+    border-collapse: collapse;
+    width: 80vw;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+}
+
+
