--- a/src/style.css
+++ b/src/style.css
@@ -69,10 +69,12 @@
     justify-content: flex-start;
     max-width: 100vw;
     min-width: 50vw;
+    height: 100%;
     flex-wrap: wrap;
     border:1px #3582c3 solid;
     border-radius: 10px;
     padding: 10px;
+    overflow: auto;
 }
 
 .color-item{
@@ -104,46 +106,47 @@
     font-weight: bold;
 }
 
+
+
+
 body.show-modal .backdrop{
     opacity: 1;
     visibility: visible;
     pointer-events: initial;
    }
    
-   .backdrop{
-       display:flex;
-       justify-content: center;
-       align-items: center;
-       position: fixed;
-       top:0;
-       left: 0;
-       width: 100vw;
-       height: 100vh;
-       background-color: rgba(0,0,0,0.3);
-       
-       pointer-events: none;
-       visibility: hidden;
-       opacity: 0;
-       transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
-   }
+.backdrop{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top:0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.3);
+    
+    pointer-events: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
+}
    
-   .modal{
-       padding:24px;
-       border-radius: 10%;
-       max-width: 640px;
-       min-height: 100px;
-       background-color: white;
-       border-radius:10px;
-       border: 1px solid rgba(0, 0, 0, 0.1);
-       -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-       -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-       box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-       -webkit-background-clip: padding-box;
-       -moz-background-clip: padding-box;
-       background-clip: padding-box;
-       visibility: hidden;
-       display: none;
-   }
+.modal{
+    padding:24px;
+    border-radius: 10%;
+    width: 60vw;
+    height: 60vh;
+    border-radius:10px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding-box;
+    background-clip: padding-box;
+    cursor: pointer;
+}
 
 
 
@@ -193,5 +196,5 @@ body{
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
-
+    padding: 50px;
 }
