--- a/src/user-style.css
+++ b/src/user-style.css
@@ -73,6 +73,7 @@ body.show-modal .backdrop{
     background-clip: padding-box;
     cursor: pointer;
 
+    overflow-y: auto;
     display: none;
     z-index: 10;
 }
@@ -81,7 +82,9 @@ body.show-modal .backdrop{
     display: block;
 }
 
-
+.box-gorizont{
+  flex-direction: row;
+}
 
 .active{
     background-color: #5a3688;
