--- a/src/style.css
+++ b/src/style.css
@@ -28,34 +28,60 @@ img{
 
 }
 
-.user-card{
+.advertising{
+  position: absolute;
+  width: 10vw;
+  height: 10vh;
+  left: 45vw;
+  top:-20vh;
+  margin: 0;
+  transition: all 2s;
+}
+
+.advertising *{
+  margin: 5px;
+}
+
+.advertising.show{
+  top:2vh;
+}
+
+
+.list-item{
   list-style-type: none;
   padding: 0;
-  margin:10px;
-  background-color: tomato;
+  margin:3px;
+  background-color: silver;
   width: 130px;
   min-height: 70px;
+  overflow-y: scroll;
   border-radius: 10px;
   border: 1px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   cursor: pointer;
 }
 
-.list-user{
+.list-coffe{
 display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-overflow-y: auto;
-height: 300px;
-height: 300px;
+flex-direction: column;
+height: 150px;
 width: 25vw;
 align-items: center;
-justify-content: center;
-padding: 0;
+justify-content: start;
+padding: 15px;
+border: 1px solid grey;
+overflow-y: scroll;
+overflow-x: hidden;
 }
+
+.coffe-info{
+  width: 70vw;
+  height: 86vh;
+}
+
 body.show-modal .backdrop{
   opacity: 1;
   visibility: visible;
@@ -256,21 +282,7 @@ body{
   .input:focus ~ .placeholder {
     color: #dc2f55;
   }
-  
-  .submit {
-    background-color: #08d;
-    border-radius: 12px;
-    border: 0;
-    box-sizing: border-box;
-    color: #eee;
-    cursor: pointer;
-    font-size: 18px;
-    height: 50px;
-    margin-top: 38px;
-    // outline: 0;
-    text-align: center;
-    width: 100%;
-  }
+
   
   .submit:active {
     background-color: #06b;
