--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,29 @@ img{
     height: 500px;
 }
 
+.spinner-border {
+  display: none;
+  width: 2rem;
+  height: 2rem;
+  vertical-align: text-bottom;
+  border: 0.25em solid currentColor;
+  border-right-color: transparent;
+  border-radius: 50%;
+  -webkit-animation: spinner-border 0.75s linear infinite;
+  animation: spinner-border 0.75s linear infinite;
+}
+
+.spinner-border.show{
+  display: inline-block;
+}
+
+@keyframes spinner-border {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
 .box{
   display: flex;
   flex-direction: column;
