--- a/src/css/common.css
+++ b/src/css/common.css
@@ -12,7 +12,7 @@ body {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
   height: 100vh;
 }
@@ -116,6 +116,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
+  padding: 20px;
 }
 
 .articles li {
@@ -181,4 +182,16 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+
+.search-form{
+  padding: 20px;
+}
+.search-form *{
+  margin: 5px;
+}
+
+.horizont-box{
+  flex-direction: row;
 }
