--- a/src/templates/hero-card.hbs
+++ b/src/templates/hero-card.hbs
@@ -1,12 +1,14 @@
+{images, biography, ability} = hero
+
 <div class="card">
   <div class="card-img-top">
-    <img src="{{img}}" alt="{{name}}" style="width:160px;height:240px">
+    <img src="{{images.sm}}" alt="{{name}}" style="width:160px;height:240px">
   </div>
   <div class="card-body">
-    <h2 class="card-title">Имя: {{name}}</h2>
+    <h2 class="card-title">Имя: {{biography.fullName}}</h2>
 
     <p class="card-text"><b>Умения</b></p>
-    <ul class="list-group"></ul>
+    <ul class="list-group">
     {{#each abilities}}
       <li class="list-group-item">{{ability.name}}</li>
     {{/each}}
